[build-system]
requires = ["setuptools","wheel","pandas","tqdm","requests","lxml"]
build-backend = "setuptools.build_meta"

[project]
name = "cfbd_json_py"
version = "0.0.17"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Joseph Armstrong", email="armstrongjoseph08@gmail.com"}
]

maintainers = [
    {name = "Joseph Armstrong", email="armstrongjoseph08@gmail.com"}
]

description = "Allows users to access the CFBD API, and get the resulting data in either a dictionary (think JSON), or in a pandas DataFrame (think spreadsheet)."

keywords = ['sports','football','college','college football']

classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10'
]

dependencies = [
    "setuptools>=67.6.0",
    "wheel",
    "pyarrow>=11.0.0",
    "pandas>=2.0.3",
    "tqdm",
    "requests",
    "lxml"
]

[project.urls]
homepage = "https://github.com/armstjc/cfbd-json-py"
documentation = "https://armstjc.github.io/cfbd-json-py/cfbd_json_py.html"
repository = "https://github.com/armstjc/cfbd-json-py.git"
changelog = "https://github.com/armstjc/cfbd-json-py/blob/main/CHANGELOG.md"
